[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FpsCount" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 5.0
margin_top = 4.0
margin_right = 70.0
margin_bottom = 31.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="FpsCount"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "120"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -95.0
margin_right = 87.0
margin_bottom = 154.0
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 20.0
margin_top = 35.0
margin_right = 153.0
margin_bottom = 213.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_right = 133.0
margin_bottom = 20.0
text = "Resume (Esc)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 133.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 133.0
margin_bottom = 48.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 133.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsToggle" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 133.0
margin_bottom = 76.0
text = "Toggle FPS Counter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 133.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemySpawn" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 133.0
margin_bottom = 104.0
text = "EnemySpawn: ON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 133.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 133.0
margin_bottom = 132.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 133.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 133.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 133.0
margin_bottom = 158.0
text = "Look sensitivity: "
align = 1
valign = 2

[node name="Sensitivity" type="HSlider" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 133.0
margin_bottom = 178.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.04

[node name="Dead" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -57.0
margin_right = 76.0
margin_bottom = 57.0
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="Dead"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Dead/CenterContainer"]
margin_left = 47.0
margin_top = 19.0
margin_right = 104.0
margin_bottom = 95.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dead/CenterContainer/VBoxContainer"]
margin_right = 57.0
margin_bottom = 48.0
text = "you died

"
align = 1
valign = 2

[node name="MarginContainer6" type="MarginContainer" parent="Dead/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 57.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Dead/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 57.0
margin_bottom = 76.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/FpsToggle" to="." method="_on_FpsToggle_pressed"]
[connection signal="button_up" from="Menu/CenterContainer/VBoxContainer/EnemySpawn" to="." method="_on_EnemySpawn_button_up"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="Menu/CenterContainer/VBoxContainer/Sensitivity" to="." method="_on_Sensitivity_value_changed"]
[connection signal="pressed" from="Dead/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
